--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,8 +1,34 @@
 <html>
 <head>
 	<title>{{ page.title }}</title>
+	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap-combined.min.css" rel="stylesheet">
 </head>
 <body>
-	{{ content }}
+	<div class="row-fluid">
+		<div class="span3 offset1">
+			<h2>ps</h2>
+			<ul class="nav nav-list">
+				{% for p in site.pages %}
+					{% if p.category == null %}
+					<li>
+						<a href="{{ p.url | pretty_url }}" {% if p.url == page.url %}class="active"{% endif %}>
+							{{ p.title }}
+						</a>
+					</li>
+					{% endif %}
+				{% endfor %}
+
+				{% for category in site.categories %}
+					<li class="nav-header">{{ category[0] }}</li>
+					{% for p in site.pages %}
+						{% if p.category == category[0] %}
+						<li><a href="{{ p.url | pretty_url }}" {% if p.url == page.url %}class="active"{% endif %}>{{ p.title }}</a></li>
+						{% endif %}
+					{% endfor %}
+				{% endfor %}
+			</ul>
+		</div>
+		<div class="span7">{{ content }}</div>
+	</div>
 </body>
 </html>
